--- a/BundlingandMinification/BundlingandMinification.csproj
+++ b/BundlingandMinification/BundlingandMinification.csproj
@@ -107,6 +107,8 @@
     <Content Include="Content\Script\JavaScript3.js" />
     <Content Include="Content\Script\JavaScript4.js" />
     <Content Include="Content\Script\JavaScript5.js" />
+    <Content Include="Content\Style\StyleSheet1.css" />
+    <Content Include="Content\Style\StyleSheet2.css" />
     <Content Include="Global.asax" />
     <Content Include="Web.config" />
   </ItemGroup>
@@ -132,7 +134,6 @@
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
-    <Folder Include="Content\Style\" />
     <Folder Include="Models\" />
   </ItemGroup>
   <PropertyGroup>
